[gd_scene load_steps=7 format=2]

[ext_resource path="res://Players/Cursor.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://GUI/fleetFollowTarget.png" type="Texture" id=3]
[ext_resource path="res://Players/PlayerController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Players/AIController.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 23.065

[node name="Cursor" type="Area2D"]
script = ExtResource( 1 )
PlayerControllerScene = ExtResource( 4 )
AIControllerScene = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 3, 3 )
smoothing_enabled = true
drag_margin_left = 0.8
drag_margin_top = 0.8
drag_margin_right = 0.8
drag_margin_bottom = 0.8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DebugInfoLabel" type="Label" parent="."]
margin_left = -20.0
margin_top = -48.0
margin_right = 20.0
margin_bottom = -34.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_Cursor_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Cursor_body_exited"]
